--- a/chat.html
+++ b/chat.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>чат 🌍</title>
 
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -19,23 +20,36 @@
 * { box-sizing: border-box; margin:0; padding:0; }
 html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
 
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; justify-content:space-between; }
+header {
+  background:#fff; padding:10px; border-bottom:1px solid #ddd;
+  z-index:100; display:flex; align-items:center; gap:8px; justify-content:space-between;
+}
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
-#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
+#topBar {
+  display:flex; align-items:center; gap:8px; padding:6px 10px;
+  background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto;
+}
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
-#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
-.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
+#mobileUserLine {
+  display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa;
+  padding:6px 4px; border-bottom:1px solid #ddd;
+}
+.userItemMobile {
+  width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block;
+  margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s;
+  position:relative;
+}
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
 
 .alert-dot { position:absolute; top:0; right:0; width:12px; height:12px; background:red; border-radius:50%; animation: blink 1s infinite; }
 @keyframes blink { 50% { opacity:0; } }
 
-#currentPartner { font-weight:bold; color:var(--color-name); }
+#currentPartner { font-weight:bold; color: var(--color-name); }
 
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
 
@@ -45,10 +59,11 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
-#chatHeader { display:flex; justify-content:space-between; align-items:center; padding:6px 10px; border-bottom:1px solid #ddd; background:#fafafa; position:relative; gap:4px; flex-wrap:wrap; }
-#chatHeader .chatHeaderButtons { display:flex; gap:6px; flex-wrap:wrap; }
+#chatHeader { display:flex; justify-content:space-between; align-items:center; padding:6px 10px; border-bottom:1px solid #ddd; background:#fafafa; position:relative; gap:4px; }
+#chatHeader .chatHeaderButtons { display:flex; gap:6px; }
 #chatWindow { flex:1; overflow-y:auto; padding:6px; background:white; }
-.msg { margin:4px 0; padding:6px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; cursor:pointer; }
+
+.msg { margin:4px 0; padding:6px; border-radius:8px; max-width:80%; word-wrap:break-word; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
 
@@ -61,18 +76,19 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 
 footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
 
-.mobileFloatingButtons {
+.mobileControlArea {
   display:none;
   position:fixed;
-  bottom:60px; /* acima do input */
+  bottom:100px;
   left:0;
   right:0;
+  background:white;
+  padding:8px 4px;
   display:flex;
   gap:4px;
-  padding:0 4px;
-  z-index:60;
+  z-index:80;
 }
-.mobileFloatingButtons button {
+.mobileControlArea button {
   flex:1;
   padding:10px;
   font-size:0.9em;
@@ -85,21 +101,20 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 #blockBtnMobile { background:var(--color-primary); color:white; }
 
 @media(max-width:768px){
-  html, body { height:100%; overflow:visible; }
   header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
-  #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
+  #topBar { position:fixed; top:50px; left:0; right:0; height:40px; z-index:100; }
   #mobileUserLine { display:flex; position:fixed; top:90px; left:0; right:0; padding:6px 4px; background:#fafafa; border-bottom:1px solid #ddd; z-index:100; overflow-x:auto; white-space:nowrap; }
-  #mainContent { flex-direction:column; margin-top:130px; margin-bottom:120px; height:auto; overflow-y:auto; }
-  #chatWindow { flex:1; overflow-y:auto; width:100%; padding-bottom:60px; max-height: calc(100vh - 220px); }
-  #chatInput { position:fixed; bottom:0; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
-  footer { position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px; }
+  #mainContent { flex-direction:column; margin-top:140px; margin-bottom:120px; height:auto; overflow-y:auto; }
+  #chatWindow { flex:1; overflow-y:auto; width:100%; padding-bottom:150px; }
+  #chatInput { position:fixed; bottom:50px; left:0; right:0; background:white; z-index:70; width:100%; }
+  .mobileControlArea { display:flex; bottom:100px; }
+  footer { position:fixed; bottom:0; left:0; right:0; height:40px; z-index:90; }
   #userList, #adSidebar { display:none; }
-
-  .mobileFloatingButtons { display:flex; }
 }
 </style>
 </head>
 <body>
+
 <header>
   <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
 </header>
@@ -125,9 +140,10 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
         <button id="blockBtn" style="display:none;">Bloquear</button>
       </div>
     </div>
+
     <div id="chatWindow"></div>
 
-    <div class="mobileFloatingButtons">
+    <div class="mobileControlArea">
       <button id="hideChatBtnMobile">Apagar chat</button>
       <button id="blockBtnMobile">Bloquear</button>
     </div>
@@ -143,137 +159,84 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 
 <script>
-const firebaseConfig = {
-  apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
-  authDomain:"dimitry-rusian.firebaseapp.com",
-  databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",
-  projectId:"dimitry-rusian",
-  storageBucket:"dimitry-rusian.appspot.com",
-  messagingSenderId:"449029666805",
-  appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"
-};
+/* ========== FIREBASE CONFIG ========== */
+const firebaseConfig={apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
+authDomain:"dimitry-rusian.firebaseapp.com",
+databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",
+projectId:"dimitry-rusian",
+storageBucket:"dimitry-rusian.appspot.com",
+messagingSenderId:"449029666805",
+appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"};
 firebase.initializeApp(firebaseConfig);
 
-const auth=firebase.auth();
-const db=firebase.database();
+/* ========== VARIÁVEIS GLOBAIS ========== */
+const auth=firebase.auth(),db=firebase.database();
+const loginBtn=document.getElementById("loginBtn"),logoutBtn=document.getElementById("logoutBtn"),
+msgInput=document.getElementById("msgInput"),sendBtn=document.getElementById("sendBtn"),
+chatWindow=document.getElementById("chatWindow"),userList=document.getElementById("userList"),
+alertaLogin=document.getElementById("alertaLogin"),onlineCount=document.getElementById("onlineCount"),
+generalBtn=document.getElementById("generalBtn"),mobileUserLine=document.getElementById("mobileUserLine"),
+currentPartnerEl=document.getElementById("currentPartner"),hideChatBtn=document.getElementById("hideChatBtn"),
+blockBtn=document.getElementById("blockBtn"),hideChatBtnMobile=document.getElementById("hideChatBtnMobile"),
+blockBtnMobile=document.getElementById("blockBtnMobile");
 
-const loginBtn=document.getElementById("loginBtn");
-const logoutBtn=document.getElementById("logoutBtn");
-const msgInput=document.getElementById("msgInput");
-const sendBtn=document.getElementById("sendBtn");
-const chatWindow=document.getElementById("chatWindow");
-const userList=document.getElementById("userList");
-const alertaLogin=document.getElementById("alertaLogin");
-const onlineCount=document.getElementById("onlineCount");
-const generalBtn=document.getElementById("generalBtn");
-const mobileUserLine=document.getElementById("mobileUserLine");
-const currentPartnerEl=document.getElementById("currentPartner");
-const hideChatBtn=document.getElementById("hideChatBtn");
-const blockBtn=document.getElementById("blockBtn");
-const hideChatBtnMobile=document.getElementById("hideChatBtnMobile");
-const blockBtnMobile=document.getElementById("blockBtnMobile");
+let currentChat="chatGlobal",privateChatListener=null,alertIcons={},userData={},currentPartnerUID=null,blockedUsers={},hiddenChats={};
 
-let currentChat="chatGlobal";
-let privateChatListener=null;
-let alertIcons={};
-let userData={};
-let currentPartnerUID=null;
-let blockedUsers={};
-let hiddenChats={};
-
-// Login / Logout
+/* ========== LOGIN E LOGOUT ========== */
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
 auth.onAuthStateChanged(user=>{
   if(user){
-    loginBtn.style.display="none";
-    logoutBtn.style.display="inline-block";
-    alertaLogin.style.display="none";
-    msgInput.disabled=false;
-    sendBtn.disabled=false;
+    loginBtn.style.display="none"; logoutBtn.style.display="inline-block";
+    alertaLogin.style.display="none"; msgInput.disabled=false; sendBtn.disabled=false;
     userData={uid:user.uid,name:user.displayName,photo:user.photoURL};
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
     loadBlockedUsers().then(updateUserList);
     startGlobalChat();
   } else {
-    loginBtn.style.display="inline-block";
-    logoutBtn.style.display="none";
-    alertaLogin.style.display="inline-block";
-    msgInput.disabled=true;
-    sendBtn.disabled=true;
-    userData={};
-    currentPartnerUID=null;
-    updateUserList();
-    startGlobalChat();
+    loginBtn.style.display="inline-block"; logoutBtn.style.display="none";
+    alertaLogin.style.display="inline-block"; msgInput.disabled=true; sendBtn.disabled=true;
+    userData={}; currentPartnerUID=null;
+    updateUserList(); startGlobalChat();
   }
 });
 
-// Carregar bloqueados
+/* ========== BLOQUEIO ========== */
 async function loadBlockedUsers(){
-  if(!userData.uid) return;
-  const snap = await db.ref(`blocked/${userData.uid}`).once("value");
-  blockedUsers = snap.val()||{};
+  if(!userData.uid)return;
+  const snap=await db.ref(`blocked/${userData.uid}`).once("value");
+  blockedUsers=snap.val()||{};
 }
 
-// Bloquear / Desbloquear
 function toggleBlock(){
-  if(!currentPartnerUID || !userData.uid) return;
+  if(!currentPartnerUID||!userData.uid)return;
   const ref=db.ref(`blocked/${userData.uid}/${currentPartnerUID}`);
   if(blockedUsers[currentPartnerUID]){
-    ref.remove();
-    blockedUsers[currentPartnerUID]=false;
-    blockBtn.textContent="Bloquear";
-    blockBtnMobile.textContent="Bloquear";
-    alert("Usuário desbloqueado.");
-  } else {
-    ref.set(true);
-    blockedUsers[currentPartnerUID]=true;
-    blockBtn.textContent="Desbloquear";
-    blockBtnMobile.textContent="Desbloquear";
-    alert("Usuário bloqueado.");
+    ref.remove(); blockedUsers[currentPartnerUID]=false;
+    blockBtn.textContent=blockBtnMobile.textContent="Bloquear"; alert("Usuário desbloqueado.");
+  }else{
+    ref.set(true); blockedUsers[currentPartnerUID]=true;
+    blockBtn.textContent=blockBtnMobile.textContent="Desbloquear"; alert("Usuário bloqueado.");
   }
 }
-blockBtn.onclick=toggleBlock;
-blockBtnMobile.onclick=toggleBlock;
+blockBtn.onclick=toggleBlock; blockBtnMobile.onclick=toggleBlock;
 
-// Atualizar lista de usuários
+/* ========== LISTA DE USUÁRIOS ========== */
 function updateUserList(){
   db.ref("online").once("value").then(snap=>{
     const users=snap.val()||{};
-    userList.innerHTML="";
-    mobileUserLine.innerHTML="";
-    alertIcons={};
+    userList.innerHTML=""; mobileUserLine.innerHTML=""; alertIcons={};
 
-    const divGlobal=document.createElement("div");
-    divGlobal.className="userItem";
-    divGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png"><span>Global</span>`;
-    divGlobal.onclick=startGlobalChat;
-    userList.appendChild(divGlobal);
-
-    const mobGlobal=document.createElement("div");
-    mobGlobal.className="userItemMobile";
-    mobGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png" title="Global">`;
-    mobGlobal.onclick=startGlobalChat;
-    mobileUserLine.appendChild(mobGlobal);
-
-    if(userData.uid){
-      const divSelf=document.createElement("div");
-      divSelf.className="userItem";
-      divSelf.innerHTML=`<img src="${userData.photo}"><span>${userData.name}</span>`;
-      divSelf.onclick=()=>alert("Este é você!");
-      userList.appendChild(divSelf);
-
-      const mobSelf=document.createElement("div");
-      mobSelf.className="userItemMobile";
-      mobSelf.innerHTML=`<img src="${userData.photo}" title="${userData.name}">`;
-      mobSelf.onclick=()=>alert("Este é você!");
-      mobileUserLine.appendChild(mobSelf);
-    }
+    const globalDiv=document.createElement("div");
+    globalDiv.className="userItem"; globalDiv.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png"><span>Global</span>`;
+    globalDiv.onclick=startGlobalChat; userList.appendChild(globalDiv);
+    const mobGlobal=globalDiv.cloneNode(true);
+    mobGlobal.className="userItemMobile"; mobileUserLine.appendChild(mobGlobal);
 
     for(const [uid,u] of Object.entries(users)){
-      if(!u.name || uid===userData.uid) continue;
+      if(uid===userData.uid)continue;
       const div=document.createElement("div");
       div.className="userItem";
       div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
@@ -288,79 +251,51 @@ function updateUserList(){
 
       alertIcons[uid]={desktop:div,mobile:mob};
     }
-
     onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
   });
 }
 
-// CHAT GLOBAL
+/* ========== CHAT GLOBAL ========== */
 function startGlobalChat(){
-  currentChat="chatGlobal";
-  currentPartnerUID=null;
+  currentChat="chatGlobal"; currentPartnerUID=null;
   currentPartnerEl.textContent="🌍 Global";
-  blockBtn.style.display="none";
-  hideChatBtn.style.display="none";
-  blockBtnMobile.style.display="none";
-  hideChatBtnMobile.style.display="none";
+  hideChatBtn.style.display=blockBtn.style.display="none";
+  hideChatBtnMobile.style.display=blockBtnMobile.style.display="none";
   chatWindow.innerHTML="";
-  generalBtn.style.display="none";
-
   db.ref("chatGlobal").once("value").then(snap=>{
     snap.forEach(m=>showMessage(m.val(),"chatGlobal"));
   });
 }
 
-// CHAT PRIVADO
+/* ========== CHAT PRIVADO ========== */
 function startPrivateChat(uid,name){
-  currentPartnerUID=uid;
-  currentChat=[userData.uid,uid].sort().join("_");
-  currentPartnerEl.textContent=name;
-  blockBtn.style.display="inline-block";
-  hideChatBtn.style.display="inline-block";
-  blockBtnMobile.style.display="inline-block";
-  hideChatBtnMobile.style.display="inline-block";
-  blockBtn.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
-  blockBtnMobile.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
-  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
-  generalBtn.style.display="inline-block";
+  currentPartnerUID=uid; currentChat=[userData.uid,uid].sort().join("_");
+  currentPartnerEl.textContent=name; chatWindow.innerHTML="";
+  hideChatBtn.style.display=blockBtn.style.display="inline-block";
+  hideChatBtnMobile.style.display=blockBtnMobile.style.display="inline-block";
+  blockBtn.textContent=blockBtnMobile.textContent=blockedUsers[uid]?"Desbloquear":"Bloquear";
 
-  if(privateChatListener) privateChatListener.off();
+  if(privateChatListener)privateChatListener.off();
   privateChatListener=db.ref("private/"+currentChat);
   privateChatListener.on("child_added",snap=>{
-    const msg=snap.val();
-    showMessage(msg,currentChat);
-    if(msg.uid!==userData.uid){
-      const icon=alertIcons[msg.uid]?.desktop;
-      if(icon && !icon.querySelector(".alert-dot")){
-        const dot=document.createElement("div");
-        dot.className="alert-dot";
-        icon.appendChild(dot);
-        const dotMob=dot.cloneNode();
-        alertIcons[msg.uid].mobile.appendChild(dotMob);
-      }
-    }
+    const msg=snap.val(); showMessage(msg,currentChat);
   });
 }
 
-// MENSAGENS
+/* ========== ENVIAR MENSAGEM ========== */
 sendBtn.onclick=sendMessage;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
-
 function sendMessage(){
-  const text=msgInput.value.trim();
-  if(!text || !userData.uid) return;
-  if(currentPartnerUID && blockedUsers[currentPartnerUID]){
-    alert("Você bloqueou este usuário ou está bloqueado.");
-    return;
-  }
+  const text=msgInput.value.trim(); if(!text)return;
+  if(currentPartnerUID && blockedUsers[currentPartnerUID]){alert("Você bloqueou este usuário.");return;}
   const path=currentChat==="chatGlobal"?"chatGlobal":"private/"+currentChat;
   db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
   msgInput.value="";
 }
 
+/* ========== MOSTRAR MENSAGEM ========== */
 function showMessage(msg,room){
-  if(room!=="chatGlobal" && room!==currentChat) return;
-  if(hiddenChats[currentChat] && hiddenChats[currentChat][msg.timestamp]) return; // ignorar mensagens apagadas localmente
+  if(room!=="chatGlobal"&&room!==currentChat)return;
   const div=document.createElement("div");
   div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
   div.textContent=msg.text;
@@ -368,18 +303,15 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// APAGAR CHAT
+/* ========== APAGAR CHAT (local) ========== */
 function hideChat(){
-  hiddenChats[currentChat]=hiddenChats[currentChat]||{};
-  db.ref(currentChat==="chatGlobal"?"chatGlobal":"private/"+currentChat).once("value").then(snap=>{
-    snap.forEach(m=>{hiddenChats[currentChat][m.val().timestamp]=true;});
-    chatWindow.innerHTML="";
-  });
+  hiddenChats[currentChat]={};
+  chatWindow.innerHTML="";
 }
 hideChatBtn.onclick=hideChat;
 hideChatBtnMobile.onclick=hideChat;
 
-// Atualizar usuários online
+/* Atualizar lista de usuários */
 setInterval(updateUserList,5000);
 </script>
 </body>
